Fix up name after shifting due to margin change

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p {
     bottom: 0;
     left: 0;
     font-size: 80px;
-    margin-top: -90px;
+    margin-top: -120px;
 }
 
 #about {
